GitVersion1/objects/ProtectedFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting for the protected fields on a Customer record</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>This field will denote the field order on the Dynamic Request VF Pages</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Protected Fields</label>
    <listViews>
        <fullName>CPN_India_Protected_fields</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>CPN - India</value>
        </filters>
        <label>CPN India Protected fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CQN_Canada</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>CQN - Canada</value>
        </filters>
        <label>CQN - Canada</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CQN_US</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>CQN - US</value>
        </filters>
        <label>CQN - US</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada_Protected_Fields</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>Canada Protected Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chile_Protected_Fields</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Chile</value>
        </filters>
        <label>Chile Protected Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Italy_Protected_Fields</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Italy</value>
        </filters>
        <label>Italy Protected Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Poland_Protected_Fields</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <label>Poland Protected Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Spain_Protected_Fields</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <label>Spain Protected Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_Protected_Fields</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>US Protected Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vietnam</fullName>
        <columns>NAME</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Vietnam</value>
        </filters>
        <label>Vietnam</label>
        <language>en_US</language>
    </listViews>
</CustomObject>